--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#interests">Interests</a></li>
-                <li><a href="index.html" target="_blank">Hobbies</a></li>
+                <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
             </ul>
         </nav>
         <fieldset id="about">
